Finished home fragment popular stocks and API Retrofit