@@ -5,9 +5,11 @@ import androidx.cardview.widget.CardView;
 import androidx.core.app.ActivityCompat;
 
 import android.Manifest;
+import android.annotation.SuppressLint;
 import android.content.ContentResolver;
 import android.content.ContentValues;
 import android.content.pm.PackageManager;
+import android.graphics.Color;
 import android.os.Bundle;
 import android.provider.CalendarContract;
 import android.widget.TextView;
@@ -17,36 +19,44 @@ import com.medvedev.financeapp.R;
 import com.medvedev.financeapp.presentation.viewModel.StockInfoViewModel;
 
 import java.util.Calendar;
+import java.util.Objects;
 
 public class StockInfoActivity extends AppCompatActivity {
 
     private CardView addNotificationCv;
-    private StockInfoViewModel model;
     private TextView tickerTv;
     private TextView companyTv;
     private TextView costTv;
-    private TextView lastCostTv;
+    private TextView changePerCentTv;
 
+    @SuppressLint("SetTextI18n")
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_stock_info);
-        getSupportActionBar().hide();
+        Objects.requireNonNull(getSupportActionBar()).hide();
 
         tickerTv = findViewById(R.id.tickerTvInfo);
         companyTv = findViewById(R.id.companyNameTvInfo);
         costTv = findViewById(R.id.costTvInfo);
-        lastCostTv = findViewById(R.id.lastCostTvInfo);
+        changePerCentTv = findViewById(R.id.lastCostTvInfo);
         addNotificationCv = findViewById(R.id.notificationCvInfo);
 
-        Integer id = this.getIntent().getIntExtra("id", 0);
-        model = new StockInfoViewModel(getApplication());
-        model.getById(id).observe(this, stockDTO -> {
-            tickerTv.setText(stockDTO.getTicker());
-            companyTv.setText(stockDTO.getCompanyName());
-            costTv.setText(new Double(stockDTO.getCost()).toString());
-            lastCostTv.setText(new Double(stockDTO.getChangePerCent()).toString());
+        String ticker = this.getIntent().getStringExtra("name");
+        String companyName = this.getIntent().getStringExtra("companyName");
+        StockInfoViewModel model = new StockInfoViewModel(getApplication());
+        model.getStockPrice(ticker).observe(this, stockPriceData -> {
+            tickerTv.setText(ticker);
+            companyTv.setText(companyName);
+            costTv.setText(Double.valueOf(stockPriceData.getC()).toString());
+            changePerCentTv.setText(Double.valueOf(stockPriceData.getDp()).toString());
+            if(Double.parseDouble(stockPriceData.getDp()) > 0)
+                changePerCentTv.setTextColor(Color.GREEN);
+            else if(Double.parseDouble(stockPriceData.getDp()) < 0)
+                changePerCentTv.setTextColor(Color.RED);
             addNotificationCv.setOnClickListener(v -> {
+                if(costTv.getText().equals("loading"))
+                    return;
                 if (ActivityCompat.checkSelfPermission(
                         getApplicationContext(),
                         Manifest.permission.WRITE_CALENDAR) != PackageManager.PERMISSION_GRANTED) {
@@ -60,15 +70,16 @@ public class StockInfoActivity extends AppCompatActivity {
                     ContentResolver cr = getContentResolver();
                     ContentValues cv = new ContentValues();
 
-                    cv.put(CalendarContract.Events.TITLE, stockDTO.getTicker());
-                    cv.put(CalendarContract.Events.DESCRIPTION, stockDTO.getCompanyName() +
-                            "\n current cost: "+ stockDTO.getCost() + " $" +
-                            "\n last cost: "+ stockDTO.getChangePerCent() + " $");
+                    cv.put(CalendarContract.Events.TITLE, "Start watch " + ticker);
+                    cv.put(CalendarContract.Events.DESCRIPTION, companyName +
+                            "\n current cost: "+ stockPriceData.getC() + " $" +
+                            "\n last cost: "+ stockPriceData.getDp() + " $");
                     cv.put(CalendarContract.Events.DTSTART, System.currentTimeMillis());
                     cv.put(CalendarContract.Events.DTEND, System.currentTimeMillis() + 1000);
                     cv.put(CalendarContract.Events.CALENDAR_ID, 2);
                     cv.put(CalendarContract.Events.EVENT_TIMEZONE, Calendar.getInstance().getTimeZone().getID());
                     cr.insert(CalendarContract.Events.CONTENT_URI, cv);
+                    //TODO open calendar
                     Toast.makeText(this, "Successfully added", Toast.LENGTH_SHORT).show();
                 }
             });
