@@ -3,6 +3,7 @@ package com.medvedev.financeapp.presentation.view.adapters;
 
 import android.annotation.SuppressLint;
 import android.content.Intent;
+import android.graphics.Color;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
@@ -31,14 +32,18 @@ public class StockListAdapter extends RecyclerView.Adapter<StockListAdapter.Stoc
         return new StockListHolder(itemView);
     }
 
+    @SuppressLint("SetTextI18n")
     @Override
     public void onBindViewHolder(@NonNull StockListHolder holder, int position) {
         StockDTO currentStock = stocks.get(position);
-        holder.setId(currentStock.getId());
         holder.tickerTv.setText(currentStock.getTicker());
         holder.companyNameTv.setText(currentStock.getCompanyName());
-        holder.lastCostTv.setText(new Double(currentStock.getChangePerCent()).toString());
-        holder.costTv.setText(new Double(currentStock.getCost()).toString());
+        holder.changePerCent.setText(Double.valueOf(currentStock.getChangePerCent()).toString());
+        if(currentStock.getChangePerCent() > 0)
+            holder.changePerCent.setTextColor(Color.GREEN);
+        else if(currentStock.getChangePerCent() < 0)
+            holder.changePerCent.setTextColor(Color.RED);
+        holder.costTv.setText(Double.valueOf(currentStock.getCost()).toString());
     }
 
     @Override
@@ -66,30 +71,28 @@ public class StockListAdapter extends RecyclerView.Adapter<StockListAdapter.Stoc
     }
 
     class StockListHolder extends RecyclerView.ViewHolder{
-        private TextView tickerTv;
-        private TextView costTv;
-        private TextView companyNameTv;
-        private TextView lastCostTv;
-        private CardView item;
-        private int id;
+        private final TextView tickerTv;
+        private final TextView costTv;
+        private final TextView companyNameTv;
+        private final TextView changePerCent;
+        private final CardView item;
 
         public StockListHolder(@NonNull View itemView) {
             super(itemView);
             tickerTv = itemView.findViewById(R.id.tickerTv);
             costTv = itemView.findViewById(R.id.costTv);
             companyNameTv = itemView.findViewById(R.id.companyNameTv);
-            lastCostTv = itemView.findViewById(R.id.lastCostTv);
+            changePerCent = itemView.findViewById(R.id.changePerCentTv);
             item = itemView.findViewById(R.id.itemCvMain);
 
             item.setOnClickListener(v -> {
                 Intent intent = new Intent(item.getContext(), StockInfoActivity.class);
-                intent.putExtra("id", id);
+                intent.putExtra("name", tickerTv.getText().toString());
+                intent.putExtra("companyName", companyNameTv.getText().toString());
                 item.getContext().startActivity(intent);
             });
 
         }
-
-        public void setId(int id){ this.id = id; }
     }
 
 }
